2010-10-14  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* nnimap.el (nnimap-open-connection): Message when opening connection
	for debugging purposes.

	* gnus-art.el (gnus-article-setup-buffer): Set article mode truncation
	on every setup buffer call to allow this to change from article to
	article.

	* shr.el (shr-tag-table): Experimental feature: Truncate lines in
	buffers where we have a wide table.

2010-10-14  Andrew Cohen  <cohen@andy.bu.edu>

	* gnus-sum.el (gnus-summary-refer-thread): Implement a version that
	uses *-request-thread.

2010-10-14  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* nnimap.el (nnimap-open-connection): Remove %s from openssl
	incantation, which is no longer valid.

2010-10-14  Julien Danjou  <julien@danjou.info>

	* shr.el: Fix defcustom type (char -> character).

2010-10-14  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* nnimap.el (nnimap-open-connection): tls-program should be a list of
	programs.

2010-10-14  Julien Danjou  <julien@danjou.info>

	* shr.el (shr-tag-a): Use url-link as widget type.

	* gnus-group.el (gnus-group-insert-group-line): Fix group argument to
	`gnus-group-get-icon'.

2010-10-13  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* nnimap.el (nnimap-close-server): Forget the nnimap data on close.
	This should make server editing work better.

	* shr.el (shr-find-fill-point): Don't inloop on indented text.

	* tls.el (tls-program): Remove spurious %s from openssl.

	* nnimap.el (nnimap-open-connection): Fix open-tls-stream call.
	(nnimap-parse-flags): Fix regexp.

	* shr.el (shr-find-fill-point): Use a filling algorithm that should
	probably work for CJVK text, too.

	* nnimap.el (nnimap-extend-tls-programs): Removed.
	(nnimap-open-connection): Bind STARTTLS to openssl explicitly.

	* tls.el (tls-starttls-switches): Remove starttls hack.
	(open-tls-stream): Ditto.
	(tls-find-starttls-argument): Ditto.

2010-10-13  Julien Danjou  <julien@danjou.info>
